# BearWM

./: CMakeLists.txt  README.md  prebuild.lua  run.sh  xinitrc
.cache/clangd/index/: BearWM.cpp.CF7458C9146B6F8E.idx  BearWM.h.0765278471B9C57C.idx
BearWM/src/BearWM/Core/: BearWM.c  BearWM.cpp  WindowManager.cpp  WindowManager.h
